# examples

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  references.bib  us_doe_h2o_wave_hindcast_resource_characterization.experiment.bk.qmd  us_doe_h2o_wave_hindcast_resource_characterization.ipynb  us_doe_h2o_wave_hindcast_resource_characterization.py  us_doe_h2o_wave_hindcast_resource_characterization.qmd
.devcontainer/: devcontainer.json
h2o_examples/: __init__.py  cache.py  environment.py  figures.py  mapping.py  sites.py
kaggle/: .gitignore  README.md  build.sh  dataset-metadata.json  kernel-metadata.json  upload.sh
